auto-dp/.snakemake/log/2024-07-24T224857.175589.snakemake.log
Full Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/snakemake/__init__.py", line 551, in snakemake
    workflow.include(
  File "/usr/lib/python3/dist-packages/snakemake/workflow.py", line 1057, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/home/remipoul/LIX_WORK/pwb/auto-dp/workflow/Snakefile", line 130
    rule extract_compact_tree:
        ^
SyntaxError: invalid syntax

SyntaxError in line 67 of /home/remipoul/LIX_WORK/pwb/auto-dp/workflow/Snakefile:
invalid syntax
